# dptoie-neural

./: .coveragerc  .flake8  .gitignore  Pipfile  README.md  README.txt  TODO.md  convert_to_conll.py  csv_to_labeled.py  evaluate_result.py  hi4nlp.py  pyproject.toml  run_oie.py
datasets/coling_PUD/: 200-sentences-pt-PUD-iberlef-format.txt  200-sentences-pt-PUD.txt  coling2020-iberlef(1).txt  coling2020.txt  estanc64_openie_annotation.sql
datasets/gamalho_dataset/: argoe-pt-labeled.csv  gold.csv  sentences.txt
datasets/iberlef/: Task3-Corpus-Test1.tsv  Task3-Corpus-Test2.tsv
datasets/meu_dataset/: saida.gold_conll  wiki200_saida.gold_conll
datasets/pragmatic_dataset/: ceten200-labeled.csv  ceten200.csv  ceten200.txt  wiki200-labeled.csv
meu_dataset/: ceten200_saida.gold_conll
multioie/: hi4nlp.py  main.py  old_main.py  portuguese.py
multioie/evaluation/: benchmark.py  curve_both.txt  curve_dpt.txt  evaluate.py  linguakit.py  matcher.py  saida_conll_linguakit.conll  saida_linguakit_gamalho.txt
multioie/model/: AllenNLP.py  featurizer.py  openie_predictor.py
multioie/model/allen_helpers/: array_indexer.py  broka_text_field_embedder.py  broka_trainer.py  flair_char_indexer.py  flair_token_embedder.py  my_fast_transformers.py  my_metric_tracker.py  sru_wrapper.py
multioie/old/: convert_all_to_conll.py  csv_to_labeled.py
multioie/optimizers/: madgrad_wd.py
multioie/utils/: align.py  contractions.py  convert_to_conll.py  dataset.py  evaluate_result.py  format_oie.py  token_iter.py
multioie/utils/alignment/: __init__.py  align.py  alignment.py  utils.py
openie_pt/: config.json  srl.json
output_other_systems/dptoie/: extractedFactsByDpOIE.csv  extractedFactsByDpOIE_gamalho.csv  pud_100.txt  saida_conll_dptoie.conll  saida_conll_dptoie_gamalho.conll
output_other_systems/linguakit/: linguakit_result.csv  saida_conll_linguakit.conll  saida_linguakit.txt
pragmatic_dataset/: ceten200-labeled.csv  wiki200-labeled.csv  wiki200.csv  wiki200.txt
saida/: ceten200_sentencas_teste.txt  saida.gold_conll  saida.txt  sentencas_teste.txt  wiki200_sentencas_teste.txt
saida_novo/model_final/: model_params.json
saida_novo/model_final/vocabulary/: dep_tags.txt  flair.txt  labels.txt  tokens.txt  word_shape_degen.txt
