[tool]
[tool.black]
line-length = 100

include = '\.pyi?$'

exclude = '''
(
      __pycache__
    | \btutorials\b
    | \bbuild\b
    | \.git
    | \env.ini
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \train
    | \test
    | \bdist\b
    | \bdoc\b
)
'''

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.poetry]
name = "dptoie-neural"
version = "0.0.1"
description = "DPTOie neural"

license = "GPL-3."

authors = [
    "Bruno Cabral <bruno@potelo.com.br>",
]

packages = [

]
[tool.poetry.dependencies]
python = ">=3.8,<3.10"
torch = ">=1.9.1"
spacy = { version = ">=3.0"}
sru = { git = "https://github.com/asappresearch/sru.git", branch = "3.0.0-dev" }
flair = { git = "https://github.com/flairNLP/flair.git", branch = "master" }
allennlp = {version = "==2.7.0"}
allennlp-models = {version = "==2.7.0"}
seqeval = "*"
docopt = "*"
torch-optimizer = "*"
diskcache = "*"
typer = "*"
x-transformers = "*"

[tool.poetry.dev-dependencies]
imagehash = "*"
black = "^20.8b1"
mypy = "^0.790"
pytest = "*"
flake8 = "*"
coverage = "*"

